fix: Scrollbar styles

--- a/src/layout/scroll/custom.css
+++ b/src/layout/scroll/custom.css
@@ -1,7 +1,8 @@
-.os-scrollbar {
-    --os-handle-bg: var(--color-border-primary);
-    --os-handle-bg-hover: var(--color-border-primary-accent);
-    --os-handle-bg-active: var(--color-border-primary-accent);
+.os-scrollbar-handle {
+    --os-handle-border-radius: 999rem;
+    --os-handle-bg: var(--color-silver);
+    --os-handle-bg-hover: var(--color-white);
+    --os-handle-bg-active: var(--color-white);
 }
 
 .os-scrollbar-vertical .os-scrollbar-handle {
